deploy/kubernetes/trivy-image-validator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy-image-validator
  labels:
    app: trivy-image-validator
  namespace: validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivy-image-validator
  template:
    metadata:
      labels:
        app: trivy-image-validator
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: trivy-image-validator
          image: devopstales/trivy-image-validator:1.0.0
          imagePullPolicy: Always
          volumeMounts:
          - name: cache
            mountPath: "/home/kube-trivy-admission/.cache/trivy"
#          - name: config-json
#            mountPath: "/home/kube-trivy-admission/.docker"
      volumes:
      - name: cache
        persistentVolumeClaim:
            claimName: "trivy-cache"
#      - name: config-json
#        secret:
#          secretName: config-json
---
apiVersion: v1
kind: Service
metadata:
  name: trivy-image-validator
  namespace: validation
spec:
  selector:
    app: trivy-image-validator
  ports:
  - port: 443
    targetPort: 5000
