deploy/kubernetes/vwc.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: trivy-image-validating-webhook-cfg
webhooks:
  - name: trivy-image-validator.devopstales.intra
    sideEffects: "None"
    admissionReviewVersions: [v1beta1, v1]
    clientConfig:
      service:
        name: trivy-image-validator
        namespace: validation
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV6RENDQXJRQ0NRQ2w3a3Z2eFRQK3ZEQU5CZ2txaGtpRzl3MEJBUXNGQURBbk1TVXdJd1lEVlFRRERCeEIKWkcxcGMzTnBiMjRnUTI5dWRISnZiR3hsY2lCWFpXSm9iMjlyTUNBWERUSXhNRGN5TlRBNE16ZzBPRm9ZRHpJeApNakV3TnpBeE1EZ3pPRFE0V2pBbk1TVXdJd1lEVlFRRERCeEJaRzFwYzNOcGIyNGdRMjl1ZEhKdmJHeGxjaUJYClpXSm9iMjlyTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUFwc2dlQmF4cU1LZ3UKTWR2ZC9vVGczYUlCbk50QjZQczFwZWJxYTA3dFZDaFUrb2o5dkN5OXR6WW5FRmRZRm9uNjVjZndMc2Rvd0pzMAo2U0VkT21EbCs [...]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "deployments"
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
    namespaceSelector:
      matchLabels:
        trivy-image-validator: enabled
